--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ video_shards/
 retrieved_shards/
 
 # Example generated test video
-test_video.mp4
+test_video*.mp4
 # Add other test video filenames if you create them
 
 # OS generated files
